import { relations } from "drizzle-orm";
import {
  pgTable,
  text,
  timestamp,
  uuid,
  decimal,
  date,
  pgEnum,
  jsonb,
  integer,
} from "drizzle-orm/pg-core";

// ------------ Enum definitions ------------

export const status = pgEnum("status", [
  "pending",
  "processing",
  "complete",
  "failed",
]);

export const categoryEnum = pgEnum("category", [
  "tolls/parking",
  "hotel",
  "transport",
  "fuel",
  "meals",
  "phone",
  "supplies",
  "misc",
]);

// ------------ Table column definitions ------------

export const expenseReportJobs = pgTable("expense_report_jobs_table", {
  id: uuid("id").primaryKey().notNull().defaultRandom(),
  // userId: uuid("user_id").notNull().defaultRandom(), // TODO
  status: status("status"),
  totalFiles: integer("total_files").notNull().default(0),
  processedFiles: integer("processed_files").notNull().default(0),
  createdAt: timestamp("created_at").defaultNow().notNull(),
  updatedAt: timestamp("updated_at").defaultNow().notNull(),
});

export const receiptFiles = pgTable("receipt_files_table", {
  id: uuid("id").primaryKey().notNull().defaultRandom(),
  jobId: uuid("job_id")
    .references(() => expenseReportJobs.id)
    .notNull(),
  s3Url: text("s3_url").notNull(),
  originalFilename: text("original_filename"),
  status: status("status"),
  errorMessage: text("error_message"),
  createdAt: timestamp("created_at").defaultNow().notNull(),
  processedAt: timestamp("processed_at"),
});

export const extractedExpenses = pgTable("extracted_expenses_table", {
  id: uuid("id").primaryKey().notNull().defaultRandom(),
  jobId: uuid("job_id")
    .references(() => expenseReportJobs.id)
    .notNull(),
  receiptId: uuid("receipt_id")
    .references(() => receiptFiles.id)
    .notNull(),
  merchant: text("merchant"),
  description: text("description"),
  date: date("date"),
  amount: decimal("amount", { precision: 10, scale: 2 }).notNull(),
  category: categoryEnum("category").notNull(),
  transportDetails: jsonb("transport_details").$type<{
    mode: "train" | "car" | "plane" | null;
    mileage: number | null;
  } | null>(),
  rawJson: jsonb("raw_json"),
  modelVersion: text("model_version").notNull(),
  createdAt: timestamp("created_at").defaultNow().notNull(),
});

// ------------ Relations definitions ------------

// Job → ReceiptFiles (1-to-many)
export const expenseReportJobsRelations = relations(
  expenseReportJobs,
  ({ many }) => ({
    receiptFiles: many(receiptFiles),
    extractedExpenses: many(extractedExpenses),
  })
);

// ReceiptFiles → Job (many-to-1) and → ExtractedExpenses (1-to-many)
export const receiptFilesRelations = relations(
  receiptFiles,
  ({ one, many }) => ({
    job: one(expenseReportJobs, {
      fields: [receiptFiles.jobId],
      references: [expenseReportJobs.id],
    }),
    extractedExpenses: many(extractedExpenses),
  })
);

// ExtractedExpenses → Job + ReceiptFile
export const extractedExpensesRelations = relations(
  extractedExpenses,
  ({ one }) => ({
    job: one(expenseReportJobs, {
      fields: [extractedExpenses.jobId],
      references: [expenseReportJobs.id],
    }),
    receipt: one(receiptFiles, {
      fields: [extractedExpenses.receiptId],
      references: [receiptFiles.id],
    }),
  })
);

// ------------ Type-safe helpers ------------
export type ExtractedExpense = typeof extractedExpenses.$inferSelect;
export type NewExtractedExpense = typeof extractedExpenses.$inferInsert;

export type ExpenseReportJob = typeof expenseReportJobs.$inferSelect;
export type NewExpenseReportJob = typeof expenseReportJobs.$inferInsert;

export type ReceiptFile = typeof receiptFiles.$inferSelect;
export type NewReceiptFile = typeof receiptFiles.$inferInsert;
